--- a/example.html
+++ b/example.html
@@ -4,14 +4,11 @@
 		<title>Example TagCloudSVG</title>
 		<meta charset="UTF-8">
 		<style>
-			svg {
+			#tagcloudsvg {
 				background: black;
 				width: 80%;
 			}
-			.hidden {
-				visibility: hidden;
-			}
-			text {
+			.tag {
 				font-size: 5em;
 				text-anchor: middle;
 				alignment-baseline: middle;
@@ -47,6 +44,7 @@
 	<body>
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
 		<script src='tagcloudsvg.js' type='text/javascript'></script>
 
 		<svg id='tagcloudsvg' viewbox='0 0 1920 1080'></svg>
