Fixed flexible entry-handling: Classless entries, labelless entriesi, empty entries.

--- a/example.html
+++ b/example.html
@@ -53,6 +53,16 @@
 
 			// Example tagcloud data.
 			var numbers = [
+					// Empty entry for testing:
+					{},
+
+					// Labelless entry for testing:
+					{ "class": ["C0"] },
+
+					// Classless entry for testing:
+					{ "label": "0" },
+
+					// Regular entries for demonstration:
 					{ "label": "1", "class": ["C1","C7"] },
 					{ "label": "2", "class": ["C1"] },
 					{ "label": "3", "class": ["C1"] },
