--- a/example.html
+++ b/example.html
@@ -99,13 +99,10 @@
 			// Create SVG elements in HTML.
 			makeTagCloudSVG(numbers);
 
-			// Rotate and zoom 1-step.
+			// This function must be within the global scope for nextFrame() to call it.
 			function animate() {
 				rotateAndZoom(numbers,0.01,0.008,0.005,0.01);
 			}
-
-			// Call animate() function with interval.
-			setInterval(animate, 1000/20);
 
 			// Simple function to get the time in human-readable form.
 			function getClockTime() {
