The tagcloud JSON now only has to be specified once during creation.

--- a/example.html
+++ b/example.html
@@ -101,7 +101,7 @@
 
 			// This function must be within the global scope for nextFrame() to call it.
 			function animate() {
-				rotateAndZoom(numbers,0.01,0.008,0.005,0.01);
+				rotateAndZoom(0.01,0.008,0.005,0.01);
 			}
 
 			// Simple function to get the time in human-readable form.
