--- a/example.html
+++ b/example.html
@@ -44,8 +44,6 @@
 	</head>
 	<body>
 
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-
 		<script src='tagcloudsvg.js' type='text/javascript'></script>
 
 		<svg id='tagcloudsvg' viewbox='0 0 1920 1080'></svg>
@@ -123,7 +121,7 @@
 
 			// Change the text of the clock tag.
 			function updateClock() {
-				$('.clock').html(getClockTime());
+				document.getElementsByClassName('clock')[0].innerHTML = getClockTime();
 			}
 
 			// Do this once ...
@@ -133,7 +131,7 @@
 			setInterval(updateClock, 1000);
 
 			// The clock's time is set. The opacity is set to 0 by addTextToSVG(..,true) and will be corrected after positioning by rotateAndZoom().
-			$('.clock').css('visibility','visible');
+			document.getElementsByClassName('clock')[0].style.visibility = 'visible';
 
 		</script>
 
