Forced font-size for stepless scaling of SVG text and one-time font rendering. Set text-rendering: speedOptimized for, presumably, faster font-rendering.

--- a/example.html
+++ b/example.html
@@ -9,10 +9,10 @@
 				width: 80%;
 			}
 			.tag {
-				font-size: 5em;
 				text-anchor: middle;
 				alignment-baseline: middle;
 				fill: white;
+				text-rendering: optimizeSpeed;
 			}
 			.clock {
 				fill: white;
@@ -52,16 +52,6 @@
 
 			// Example tagcloud data.
 			var numbers = [
-					// Empty entry for testing:
-					{},
-
-					// Labelless entry for testing:
-					{ "class": ["C0"] },
-
-					// Classless entry for testing:
-					{ "label": "0" },
-
-					// Regular entries for demonstration:
 					{ "label": "1", "class": ["C1","C7"] },
 					{ "label": "2", "class": ["C1"] },
 					{ "label": "3", "class": ["C1"] },
