--- a/example.html
+++ b/example.html
@@ -46,7 +46,7 @@
 
 		<script src='tagcloudsvg.js' type='text/javascript'></script>
 
-		<svg id='tagcloudsvg' viewbox='0 0 1920 1080'></svg>
+		<svg id='tagcloudsvg' xmlns="http://www.w3.org/2000/svg" viewbox='0 0 1920 1080'></svg>
 
 		<script>
 
@@ -82,6 +82,7 @@
 					{ "label": "28", "class": ["C6"] },
 					{ "label": "29", "class": ["C6"] },
 					{ "label": "30", "class": ["C6"] },
+					{ "label": "Anchor", "class": ["C6"], "link": "http://example.com/" },
     			];
 
 			// Create SVG elements in HTML.
