--- a/example.html
+++ b/example.html
@@ -53,7 +53,7 @@
 
 		<script src='tagcloudsvg.js' type='text/javascript'></script>
 
-		<svg id='tagcloudsvg' xmlns="http://www.w3.org/2000/svg" viewbox='0 0 1920 1080'></svg>
+		<svg id='tagcloudsvg' xmlns="http://www.w3.org/2000/svg"></svg>
 
 		<script>
 
