Code uniformity. Better viewBox for demo. Elipse added to JSON.

--- a/example.html
+++ b/example.html
@@ -90,6 +90,7 @@
 					{ "label": "29", "class": ["C6"] },
 					{ "label": "30", "class": ["C6"] },
 					{ "label": "Anchor", "class": ["C6"], "link": "http://example.com/" },
+					{ "type": "ellipse", "class": ["C6"], "attributes": [{"cx": 0},{"cy": 0},{"rx": 100},{"ry": 50}] },
     			];
 
 			// Create SVG elements in HTML.
