--- a/example.html
+++ b/example.html
@@ -90,7 +90,9 @@
 					{ "label": "29", "class": ["C6"] },
 					{ "label": "30", "class": ["C6"] },
 					{ "label": "Anchor", "class": ["C6"], "link": "http://example.com/" },
-					{ "type": "ellipse", "class": ["C6"], "attributes": [{"cx": 0},{"cy": 0},{"rx": 100},{"ry": 50}] },
+					{ "type": "ellipse", "class": ["C1"], "attributes": [{"cx": 0},{"cy": 0},{"rx": 50},{"ry": 50}] },
+					{ "type": "rect", "class": ["C2"], "attributes": [{"x": -50},{"y": -50},{"width": 100},{"height": 100},{"rx": 10},{"ry": 10}] },
+					{ "type": "rect", "class": ["C3"], "attributes": [{"x": -50},{"y": -50},{"width": 100},{"height": 100}]},
     			];
 
 			// Create SVG elements in HTML.
