--- a/example.html
+++ b/example.html
@@ -93,6 +93,7 @@
 					{ "type": "ellipse", "class": ["C1"], "attributes": [{"cx": 0},{"cy": 0},{"rx": 50},{"ry": 50}] },
 					{ "type": "rect", "class": ["C2"], "attributes": [{"x": -50},{"y": -50},{"width": 100},{"height": 100},{"rx": 10},{"ry": 10}] },
 					{ "type": "rect", "class": ["C3"], "attributes": [{"x": -50},{"y": -50},{"width": 100},{"height": 100}]},
+					{ "type": "rect", "class": ["C3"], "attributes": [{"x": -50},{"y": -50},{"width": 100},{"height": 100}], "node": [1,1,1]},
     			];
 
 			// Create SVG elements in HTML.
