--- a/example.html
+++ b/example.html
@@ -5,12 +5,21 @@
 		<meta charset="UTF-8">
 		<style>
 			#tagcloudsvg {
-				background: black;
+				background: rgb(5%,5%,5%);
 				width: 80%;
 			}
-			.link {
-				fill: purple !important;
+			.link {	
 				text-decoration: underline;
+				animation: rainbow 1s infinite;
+			}
+			@keyframes rainbow {
+				0% { fill: hsl(0,100%,50%); }
+				17% { fill: hsl(60,100%,50%); }
+				33% { fill: hsl(120,100%,50%); }
+				50% { fill: hsl(180,100%,50%); }
+				67% { fill: hsl(240,100%,50%); }
+				83% { fill: hsl(300,100%,50%); }
+				100% { fill: hsl(0,100%,50%); }
 			}
 			.link:hover {
 				fill: white !important;
@@ -18,12 +27,11 @@
 			.tag {
 				text-anchor: middle;
 				alignment-baseline: middle;
-				fill: white;
 				text-rendering: optimizeSpeed;
 			}
 			#clock {
 				fill: white;
-				font-size: 10em;
+				font-size: 8em;
 			}
 			.C1 {
 				fill: red;
@@ -53,8 +61,9 @@
 
 		<script src='tagcloudsvg.js' type='text/javascript'></script>
 
-		<svg id='tagcloudsvg' xmlns="http://www.w3.org/2000/svg"></svg>
+		<svg id='tagcloudsvg' xmlns="http://www.w3.org/2000/svg"></image></image>
 
+</svg>
 		<script>
 
 			// Example tagcloud data.
@@ -89,11 +98,14 @@
 					{ "label": "28", "class": ["C6"] },
 					{ "label": "29", "class": ["C6"] },
 					{ "label": "30", "class": ["C6"] },
-					{ "label": "Anchor", "class": ["C6"], "link": "http://example.com/" },
-					{ "type": "ellipse", "class": ["C1"], "attributes": [{"cx": 0},{"cy": 0},{"rx": 50},{"ry": 50}] },
-					{ "type": "rect", "class": ["C2"], "attributes": [{"x": -50},{"y": -50},{"width": 100},{"height": 100},{"rx": 10},{"ry": 10}] },
+					{ "label": "CLICK ME!", "class": ["C6"], "link": "https://www.youtube.com/watch?v=dQw4w9WgXcQ" },
+					{ "type": "ellipse", "class": ["C1"], "attributes": [{"cx": 0},{"cy": 0},{"z": 100},{"rx": 50},{"ry": 50}] },
+					{ "type": "rect", "class": ["C2"], "attributes": [{"x": -50},{"y": -50},{"width": 100},{"height": 100},{"rx": 20},{"ry": 20}] },
 					{ "type": "rect", "class": ["C3"], "attributes": [{"x": -50},{"y": -50},{"width": 100},{"height": 100}]},
-					{ "type": "rect", "class": ["C3"], "attributes": [{"x": -50},{"y": -50},{"width": 100},{"height": 100}], "node": [1,1,1]},
+					{ "type": "image", "attributes": [{"x": -100},{"y": -100},{"width": 200},{"height": 200},{"href": "img/satellite.svg"}], "node": [1,1,1]},
+					{ "type": "image", "attributes": [{"x": -50},{"y": -50},{"width": 100},{"height": 100},{"href": "img/chrome.svg"}]},
+					{ "type": "image", "attributes": [{"x": -50},{"y": -50},{"width": 100},{"height": 100},{"href": "img/tribbin.jpg"}]},
+					{ "label": getClockTime(), "id": "clock", "class": ["inanimate"], "node": [0,0,0] }
     			];
 
 			// Create SVG elements in HTML.
@@ -113,27 +125,13 @@
 				return hours+':'+minutes+':'+seconds;
 			}
 
-			// Add inanimate clock tag with 'node' array for X, Y and Z coordinates.
-			var length = numbers.push(
-				{ "id": "clock", "class": ["inanimate"], "node": [0,0,0.25] }
-			);
-
-			// Create text SVG element. The boolean 'true' specifies that it is initially hidden.
-			addTextToSVG(numbers[length-1], true);
-
 			// Change the text of the clock tag.
 			function updateClock() {
 				document.getElementById('clock').innerHTML = getClockTime();
 			}
 
-			// Do this once ...
-			updateClock();
-
 			// And repeat every 1000ms.
 			setInterval(updateClock, 1000);
-
-			// The clock's time is set. The opacity is set to 0 by addTextToSVG(..,true) and will be corrected after positioning by rotateAndZoom().
-			document.getElementById('clock').style.visibility = 'visible';
 
 		</script>
 
