Leftover HTML tags.

--- a/example.html
+++ b/example.html
@@ -61,9 +61,8 @@
 
 		<script src='tagcloudsvg.js' type='text/javascript'></script>
 
-		<svg id='tagcloudsvg' xmlns="http://www.w3.org/2000/svg"></image></image>
+		<svg id='tagcloudsvg' xmlns="http://www.w3.org/2000/svg"></svg>
 
-</svg>
 		<script>
 
 			// Example tagcloud data.
